samples/_failures_safe/1761786177_b95b43_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_253ed26e.c: In function ‘main’:
./samples/SAFE/__tmp_253ed26e.c:137:11: error: expected ‘;’ at end of input
  137 |     printf
      |           ^
      |           ;
./samples/SAFE/__tmp_253ed26e.c:137:5: error: expected declaration or statement at end of input
  137 |     printf
      |     ^~~~~~
